--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,8 @@ body {
    text-align: right;
    vertical-align: bottom;
    line-height: 120px;
+
+   margin-bottom: 15px;
    padding-right: 15px;
 
    background-color: #FFF;
